# renovo

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-test.txt  tbump.toml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
src/muckrack/hmr/: __init__.py  __main__.py  hot_module_replacement.py
src/renovo/: __init__.py  hot_module_replacement.py
tests/: test_loader.py
