[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "muckrack-python-hmr"
description = ""
dynamic = ["version"]
classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "flit",
  "tbump",
  "uv",
]
test = [
  "pytest",
  "pytest-cov",
  "ruff>=0.5,<0.6",
]

[tool.flit.module]
name = "muckrack.hmr"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP038"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["muckrack"]

[tool.ruff.format]
quote-style = "preserve"

[tool.tbump]
github_url = "https://github.com/muckrack/python-hmr/"

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "0.0.1"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[[tool.tbump.file]]
src = "src/muckrack/hmr/__init__.py"
version_template = "{major}.{minor}.{patch}"
search = "__version__ = '{current_version}'"

[[tool.tbump.file]]
